@@ -131,6 +131,7 @@ public:
 };
 
 static TimeFormats timeformats;
+static std::string setupTZ;
 
 // given a ptime object, return (fractional) seconds since epoch
 // account for localtime, and also account for dst
@@ -310,7 +311,8 @@ Rcpp::NumericVector convertToTime(const Rcpp::Vector<RTYPE>& sxpvec,
     }
     // There is an issue with datetime parsing under TZ=Europe/London, see eg #36 and #51
     // We think this is caused by Boost but as we return to R for formating we need to adjust
-    if (tz == "Europe/London") {					// #nocov start
+    if (setupTZ == "Europe/London") {					// #nocov start
+        //Rcpp::Rcerr << "Putzing\n";
         const double cutoff = 57722400; // 1971-10-31 02:00:00 was a policy change
         for (int i=0; i<pv.size(); i++) {
             pv[i] = pv[i] + 3600 * (pv[i] >= cutoff);
@@ -451,4 +453,9 @@ std::vector<std::string> format(Rcpp::NumericVector x) {
 int setMaxIntAsYYYYMMDD(const int val) {
     maxIntAsYYYYMMDD = val;
     return maxIntAsYYYYMMDD;
+}
+
+// [[Rcpp::export]]
+void setInitialTZ(std::string tz) {
+    setupTZ = tz;
 }
